[package]
name = "tp-updater"
version = "0.1.0"
edition = "2021"
authors = ["Kris Warner <kdwarn@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy_macro = "0.15.1"
gloo-console = "0.2.3"
gloo-dialogs = "0.1.1"
gloo-net = "0.2.4"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
yew = {version = "0.20", features = ["csr"] }
